--- a/styles.css
+++ b/styles.css
@@ -19,4 +19,10 @@ body {
     border: 1px solid white;
     position: absolute;
     cursor: grab;
+    color: white;
+    text-align: center;
+}
+
+.connect-mode {
+    background-color: red;
 }
